# 034_Face_AI_UI_NEW_MUSIC

./: .gitignore  CMakeLists.txt  README.md  partitions-16MiB.csv  sdkconfig  sdkconfig.old
components/BSP/: CMakeLists.txt  README.md
components/BSP/DHT22/: dht22.c  dht22.h
components/BSP/INMP441/: inmp441.c  inmp441.h
components/BSP/LCD/: lcd.c  lcd.h  lcdfont.h  mipi_lcd.c  mipi_lcd.h  mipilcd_ex.h
components/BSP/LED/: led.c  led.h
components/BSP/MYES8311/: myes8311.c  myes8311.h
components/BSP/MYI2S/: myi2s.c  myi2s.h
components/BSP/MYIIC/: 01_lvgl_official_transplant.code-workspace  myiic.c  myiic.h
components/BSP/SDMMC/: sdmmc.c  sdmmc.h
components/BSP/SMOKE/: smoke_sensor.c  smoke_sensor.h
components/BSP/TOUCH/: gt9xxx.c  gt9xxx.h  touch.c  touch.h
components/Middlewares/: README.md
esp32_web_simulator/: README.md  app.js  index.html  server.py  styles.css
main/: CMakeLists.txt  idf_component.yml  main.c
main/APP/AUDIO/: audioplay.c  audioplay.h  wavplay.c  wavplay.h
main/APP/FACE_AI/: face_ai.cpp  face_ai.h  gesture_ai.cpp  gesture_ai.h
main/APP/MIPI_CAM/: app_video.c  mipi_cam.c  mipi_cam.h
main/APP/MQTT/: mqtt_app.c  mqtt_app.h
main/APP/ORANGEPI/: orangepi_memory_client.c  orangepi_memory_client.h
main/APP/UI/: ai_assistant_ui.c  ai_assistant_ui.h  avatar_screen.c  avatar_screen.h  control_panel.c  esp_lvgl_port.c  esp_lvgl_port.h  esp_lvgl_port_disp.c  home_screen.c  lvgl_demo.c  music_screen.c  music_screen.h  standby_screen.c  standby_screen.h  ui_theme.h  viewer_screen.c  viewer_screen.h  xiaoyouzi_anim.c
main/APP/VOICE/: voice_pipeline.c  voice_pipeline.h
main/APP/doubao_ai/: doubao_ai.c  doubao_ai.h
main/APP/wifi_app/: wifi_app.c  wifi_app.h
orangepi_rag_service/: 03_Face_AI_UI_NEW.code-workspace  Grep output (tzttf8).txt  ORANGEPI_DEPLOY.md  __init__.py  __main__.py  app.py  family_memory.txt  install_orangepi_service.sh  memory_catalog.yaml  rag_service.py  requirements-orangepi.txt  requirements.txt  run_local.ps1  run_orangepi.sh  service.py
orangepi_rag_service/api/: __init__.py  routes.py
orangepi_rag_service_playground/: README.md  __init__.py  playground.html  routes.py  run_local.ps1
(+27 files in other folders)
